bugfixes for visibility

--- a/webpack/css/objects/audio.sass
+++ b/webpack/css/objects/audio.sass
@@ -32,13 +32,13 @@
   word-break: break-word
 
 .footer-audio-player
-  display: none
+  display: flex
   position: sticky
   bottom: 0
   width: 100%
 
-.footer-audio-player__visible
-  display: flex
+.footer-audio-player__hidden
+  display: none
 
 .footer-audio-player-cover
   width: 54px
